# usbwatcher

./: .gitignore  AUTHORS  Makefile.am  configure.ac  messages.pot
.tx/: config
data/: Makefile.am  azbooka-n516.cfg  n516.cfg  usbwatcher.ini  v3.cfg
debian/: changelog  control  copyright  rules  usbwatcher-data-azbooka-n516.postinst  usbwatcher-data-n516.postinst  usbwatcher-data-v3.postinst  usbwatcher-data-v3.prerm  usbwatcher.dirs
po/: Makefile.am  POTFILES  be.po  bg.po  bn_IN.po  ca.po  cs.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  lv.po  nl.po  pl.po  ru.po  sv.po  uk.po  usbwatcher.pot  zh.po  zh_CN.po
scripts/: 55usbwatcher  Makefile.am  usb-mass-storage  usb-unplug  usb-usbnet  usbwatcher
scripts/modprobe.d/: usbwatcher
src/: Makefile.am  usbwatcher.c
themes/: Makefile.am  usbwatcher.edc  usbwatcher.edj
