MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = \
55usbwatcher \
usb-mass-storage \
usb-unplug \
usb-usbnet \
usbwatcher \
modprobe.d/usbwatcher

mdevdir = /lib/mdev
mdev_DATA = usbwatcher

xsessiondir = /etc/X11/Xsession.d
xsession_SCRIPTS = 55usbwatcher

scriptsdir = /usr/sbin
scripts_SCRIPTS = usb-mass-storage usb-unplug usb-usbnet

modprobedir = /etc/modprobe.d
modprobe_DATA = modprobe.d/usbwatcher
